rust/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__pre_aggregation_sql_generation__daily_rollup_coarser_granularity_pg_result.snap
---
source: cubesqlplanner/src/tests/pre_aggregation_sql_generation.rs
expression: result
---
orders__country | orders__created_at_month | orders__count
----------------+--------------------------+--------------
Boston          | 2025-01-01 00:00:00      | 1            
New York        | 2025-01-01 00:00:00      | 3            
Chicago         | 2025-02-01 00:00:00      | 1            
Boston          | 2025-02-01 00:00:00      | 2            
Chicago         | 2025-03-01 00:00:00      | 2            
New York        | 2025-03-01 00:00:00      | 1
