rust/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__pre_aggregation_sql_generation__daily_rollup_non_additive_full_match_pg_result.snap
---
source: cubesqlplanner/src/tests/pre_aggregation_sql_generation.rs
expression: result
---
orders__country | orders__created_at_day | orders__avg_amount  
----------------+------------------------+---------------------
New York        | 2025-01-10 00:00:00    | 150.0000000000000000
New York        | 2025-01-11 00:00:00    | 50.0000000000000000 
Boston          | 2025-01-31 00:00:00    | 300.0000000000000000
Boston          | 2025-02-01 00:00:00    | 112.5000000000000000
Chicago         | 2025-02-15 00:00:00    | 25.0000000000000000 
Chicago         | 2025-03-01 00:00:00    | 287.5000000000000000
New York        | 2025-03-02 00:00:00    | 60.0000000000000000
