rust/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__pre_aggregation_sql_generation__full_match_main_rollup.snap
---
source: cubesqlplanner/src/tests/pre_aggregation_sql_generation.rs
expression: sql
---
SELECT "orders__status" "orders__status", "orders__city" "orders__city", sum("orders__count") "orders__count", sum("orders__total_amount") "orders__total_amount" 
FROM  orders__main_rollup  AS "orders__main_rollup"
GROUP BY 1, 2
ORDER BY  3  DESC
